Add names and requirements fr

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -46,9 +46,9 @@
     "\n",
     "Please add your details below. You can work in groups up to two.\n",
     "\n",
-    "Authors: **firstname1 lastname1** & **firstname2 lastname2**\n",
+    "Authors: **Haiwei Luo** & **Alisa Chekalina**\n",
     "\n",
-    "DoC username: **alias1** & **alias2**"
+    "DoC username: **hl2325** & **ac4325**"
    ]
   },
   {
@@ -1100,4 +1100,3 @@
  "nbformat": 4,
  "nbformat_minor": 0
 }
-
