--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1686,7 +1686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "id": "t54MjA_x_IF-"
    },
@@ -2204,7 +2204,7 @@
     "model = MammoNet(num_classes=NUM_CLASSES, learning_rate=0.001)\n",
     "\n",
     "trainer = pl.Trainer(\n",
-    "    max_epochs=30,\n",
+    "    max_epochs=3,\n",
     "    accelerator='auto',\n",
     "    devices=1,\n",
     "    log_every_n_steps=5,\n",
@@ -2488,7 +2488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2499,12 +2499,20 @@
     "        self.embeddings = [] # list where we still store the embeddings\n",
     "\n",
     "    def on_test_epoch_start(self):\n",
-    "        self.model[2] = nn.Identity(512) # replace final classification layer with identity to get embeddings\n",
-    "        self.embeddings = [] # clear the list of embeddings at the start of testing\n",
+    "        # self.model[-1] = nn.Identity(512) # replace final classification layer with identity to get embeddings\n",
+    "        # self.embeddings = [] # clear the list of embeddings at the start of testing\n",
+    "\n",
+    "        self._orig_fc = self.model.fc\n",
+    "        self.model.fc = nn.Identity()\n",
+    "        self.embeddings = []\n",
     "\n",
     "    def test_step(self, batch, batch_idx):\n",
-    "        x = batch['image'].view(batch['image'].size(0), -1)\n",
-    "        emb = self.model(x)\n",
+    "        # x = batch['image'].view(batch['image'].size(0), -1)\n",
+    "        # emb = self.model(x)\n",
+    "        # self.embeddings.append(emb.detach().cpu())\n",
+    "\n",
+    "        x = batch[\"image\"]      \n",
+    "        emb = self(x)               \n",
     "        self.embeddings.append(emb.detach().cpu())\n",
     "\n",
     "    # Override to disable other test logging of base class\n",
@@ -2514,7 +2522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2526,9 +2534,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Restoring states from the checkpoint path at ./output/mammo-net/version_39/checkpoints/epoch=1-step=166.ckpt\n",
+      "Loaded model weights from the checkpoint at ./output/mammo-net/version_39/checkpoints/epoch=1-step=166.ckpt\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0e986edb189c4578b03fff743092bf1c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Testing: |                                                                                                    …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "model_emb = MammoNetEmbeddings(num_classes=NUM_CLASSES)\n",
     "trainer.test(model=model_emb, datamodule=data, ckpt_path=trainer.checkpoint_callback.best_model_path)\n",
