Clean code and comments

--- a/notebook_final.ipynb
+++ b/notebook_final.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "id": "mqBURSbj_IF7"
    },
@@ -116,7 +116,9 @@
     "from pytorch_lightning.loggers import TensorBoardLogger\n",
     "from pytorch_lightning.callbacks import ModelCheckpoint, TQDMProgressBar\n",
     "from stocaching import SharedCache\n",
-    "from torchsampler import ImbalancedDatasetSampler"
+    "from torchsampler import ImbalancedDatasetSampler\n",
+    "\n",
+    "from torchvision.models import alexnet, AlexNet_Weights, googlenet, GoogLeNet_Weights, resnet18, ResNet18_Weights\n"
    ]
   },
   {
@@ -35834,94 +35836,46 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    " # def __init__(self, num_classes, learning_rate=0.0001, pretrained=True, freeze_features=False):\n",
-    "    #     super().__init__()\n",
-    "    #     self.num_classes = num_classes\n",
-    "    #     self.lr = learning_rate\n",
-    "\n",
-    "    #     # AlexNet (optionally pretrained on ImageNet)\n",
-    "    #     weights = AlexNet_Weights.DEFAULT if pretrained else None\n",
-    "    #     self.model = alexnet(weights=weights)  # :contentReference[oaicite:1]{index=1}\n",
-    "\n",
-    "    #     # Replace final classifier layer to match your classes\n",
-    "    #     in_features = self.model.classifier[-1].in_features\n",
-    "    #     self.model.classifier[-1] = nn.Linear(in_features, num_classes)  # :contentReference[oaicite:2]{index=2}\n",
-    "\n",
-    "    #     # Optional: feature extraction mode (train only classifier)\n",
-    "    #     if freeze_features:\n",
-    "    #         for p in self.model.features.parameters():\n",
-    "    #             p.requires_grad = False\n",
-    "\n",
-    "    #     # (Optional but handy) store the recommended preprocessing transform if pretrained\n",
-    "    #     self.preprocess = weights.transforms() if weights is not None else None  # :contentReference[oaicite:3]{index=3}\n",
-    "\n",
-    "    # def forward(self, x):\n",
-    "    #     return self.model(x)\n",
-    "\n",
-    "    # def configure_optimizers(self):\n",
-    "    #     # If freeze_features=True, only classifier params will require grad anyway\n",
-    "    #     optimizer = torch.optim.Adam(filter(lambda p: p.requires_grad, self.parameters()), lr=self.lr)\n",
-    "    #     return optimizer\n",
-    "\n",
-    "    # def process_batch(self, batch):\n",
-    "    #     img, lab = batch['image'], batch['label']\n",
-    "    #     out = self.forward(img)              # logits\n",
-    "    #     prd = torch.softmax(out, dim=1)\n",
-    "    #     loss = F.cross_entropy(out, lab)\n",
-    "    #     return loss, prd, lab\n",
-    "    "
+    "## AlexNet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {
     "id": "OJbVvqx7_IF9"
    },
    "outputs": [],
    "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
-    "import torchvision\n",
-    "import pytorch_lightning as pl\n",
-    "from torchvision.models import alexnet, AlexNet_Weights\n",
-    "from torchvision.models import resnet18, ResNet18_Weights\n",
-    "from torchvision.models import googlenet, GoogLeNet_Weights\n",
-    "from torchvision.models import squeezenet1_1, SqueezeNet1_1_Weights\n",
-    "\n",
     "class MammoNet(pl.LightningModule):\n",
     "    def __init__(self, num_classes, learning_rate=0.0001, pretrained=True, freeze_features=False):\n",
     "        super().__init__()\n",
     "        self.num_classes = num_classes\n",
     "        self.lr = learning_rate\n",
     "\n",
-    "        # AlexNet (optionally pretrained on ImageNet)\n",
+    "        # AlexNet\n",
     "        weights = AlexNet_Weights.DEFAULT if pretrained else None\n",
-    "        self.model = alexnet(weights=weights)  # :contentReference[oaicite:1]{index=1}\n",
+    "        self.model = alexnet(weights=weights)\n",
     "\n",
     "        # Replace final classifier layer to match your classes\n",
     "        in_features = self.model.classifier[-1].in_features\n",
-    "        self.model.classifier[-1] = nn.Linear(in_features, num_classes)  # :contentReference[oaicite:2]{index=2}\n",
+    "        self.model.classifier[-1] = nn.Linear(in_features, num_classes) \n",
     "\n",
     "        # Optional: feature extraction mode (train only classifier)\n",
     "        if freeze_features:\n",
     "            for p in self.model.features.parameters():\n",
     "                p.requires_grad = False\n",
     "\n",
-    "        # (Optional but handy) store the recommended preprocessing transform if pretrained\n",
-    "        self.preprocess = weights.transforms() if weights is not None else None  # :contentReference[oaicite:3]{index=3}\n",
+    "        # store the recommended preprocessing transform if pretrained\n",
+    "        self.preprocess = weights.transforms() if weights is not None else None\n",
     "\n",
     "    def forward(self, x):\n",
     "        return self.model(x)\n",
     "\n",
     "    def configure_optimizers(self):\n",
-    "        # If freeze_features=True, only classifier params will require grad anyway\n",
     "        optimizer = torch.optim.Adam(filter(lambda p: p.requires_grad, self.parameters()), lr=self.lr)\n",
     "        return optimizer\n",
     "\n",
@@ -35931,42 +35885,6 @@
     "        prd = torch.softmax(out, dim=1)\n",
     "        loss = F.cross_entropy(out, lab)\n",
     "        return loss, prd, lab\n",
-    "\n",
-    "    # def __init__(self, num_classes, learning_rate=1e-4, pretrained=True):\n",
-    "    #     super().__init__()\n",
-    "    #     self.num_classes = num_classes\n",
-    "    #     self.lr = learning_rate\n",
-    "\n",
-    "    #     weights = GoogLeNet_Weights.DEFAULT if pretrained else None\n",
-    "\n",
-    "    #     # ⚠️ aux_logits MUST be True when loading pretrained\n",
-    "    #     self.model = googlenet(weights=weights, aux_logits=True)\n",
-    "\n",
-    "    #     # Replace classifier\n",
-    "    #     self.model.fc = nn.Linear(self.model.fc.in_features, num_classes)\n",
-    "\n",
-    "    #     # Disable auxiliary heads AFTER loading\n",
-    "    #     self.model.aux1 = None\n",
-    "    #     self.model.aux2 = None\n",
-    "    #     self.model.aux_logits = False\n",
-    "\n",
-    "\n",
-    "\n",
-    "    # def forward(self, x):\n",
-    "    #     return self.model(x)\n",
-    "\n",
-    "\n",
-    "    # def configure_optimizers(self):\n",
-    "    #     return torch.optim.Adam(self.parameters(), lr=self.lr)\n",
-    "\n",
-    "\n",
-    "    # def process_batch(self, batch):\n",
-    "    #     img, lab = batch[\"image\"], batch[\"label\"]\n",
-    "    #     logits = self(img)\n",
-    "    #     loss = F.cross_entropy(logits, lab)\n",
-    "    #     prd = torch.softmax(logits, dim=1)\n",
-    "    #     return loss, prd, lab\n",
-    "\n",
     "\n",
     "\n",
     "    def on_train_epoch_start(self):\n",
@@ -36030,13 +35948,6 @@
     "        auc = auroc(self.test_preds, self.test_trgts, num_classes=self.num_classes, average='macro', task='multiclass')\n",
     "        self.log('test_auc', auc)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -36676,112 +36587,17 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "NqfQleYN_IF-"
-   },
+   "metadata": {},
    "source": [
-    "### Testing"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "BLmxhx2y_IF_"
-   },
-   "source": [
-    "Evaluate the trained model with the best checkpoint on the test data and report the classification performance.\n",
-    "\n",
-    "**TASK:** You should report the test performance in the coursework report."
+    "## GoogLeNet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def save_predictions(model, output_fname):\n",
-    "    std_ids = [id.numpy() for sublist in model.test_study_ids for id in sublist]\n",
-    "    img_ids = [id.numpy() for sublist in model.test_image_ids for id in sublist]\n",
-    "    cols_names = ['class_' + str(i) for i in range(0, NUM_CLASSES)]\n",
-    "    df = pd.DataFrame(data=model.test_preds.numpy(), columns=cols_names)    \n",
-    "    df['target'] = model.test_trgts.numpy()\n",
-    "    df['study_id'] = std_ids\n",
-    "    df['image_id'] = img_ids\n",
-    "    df.to_csv(output_fname, index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "id": "KSeq_7q6_IF_"
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Restoring states from the checkpoint path at ./output/mammo-net/version_35/checkpoints/epoch=21-step=1826.ckpt\n",
-      "Loaded model weights from the checkpoint at ./output/mammo-net/version_35/checkpoints/epoch=21-step=1826.ckpt\n",
-      "/home/haiwei/imperial/mli/ML_for_Imaging/virtualenv/lib/python3.10/site-packages/pytorch_lightning/trainer/connectors/data_connector.py:434: The 'test_dataloader' does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` to `num_workers=21` in the `DataLoader` to improve performance.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3170d255d2144e1bbc80b3e71ca38fbb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Testing: |                                                                                                    …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
-      "       Test metric             DataLoader 0\n",
-      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
-      "        test_auc            0.8969289660453796\n",
-      "        test_loss           0.7198582887649536\n",
-      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n"
-     ]
-    }
-   ],
-   "source": [
-    "trainer.test(model=model, datamodule=data, ckpt_path=trainer.checkpoint_callback.best_model_path)\n",
-    "save_predictions(model=model, output_fname=os.path.join(output_dir, 'predictions.csv'))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# GoogLeNet"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
-    "import torchvision\n",
-    "import pytorch_lightning as pl\n",
-    "from torchvision.models import alexnet, AlexNet_Weights\n",
-    "from torchvision.models import resnet18, ResNet18_Weights\n",
-    "from torchvision.models import googlenet, GoogLeNet_Weights\n",
-    "from torchvision.models import squeezenet1_1, SqueezeNet1_1_Weights\n",
-    "\n",
     "class MammoNet(pl.LightningModule):\n",
     "\n",
     "    def __init__(self, num_classes, learning_rate=1e-4, pretrained=True):\n",
@@ -36789,15 +36605,14 @@
     "        self.num_classes = num_classes\n",
     "        self.lr = learning_rate\n",
     "\n",
+    "        # GoogLeNet\n",
     "        weights = GoogLeNet_Weights.DEFAULT if pretrained else None\n",
     "\n",
-    "        # ⚠️ aux_logits MUST be True when loading pretrained\n",
     "        self.model = googlenet(weights=weights, aux_logits=True)\n",
     "\n",
-    "        # Replace classifier\n",
     "        self.model.fc = nn.Linear(self.model.fc.in_features, num_classes)\n",
     "\n",
-    "        # Disable auxiliary heads AFTER loading\n",
+    "        # Disable auxiliary heads\n",
     "        self.model.aux1 = None\n",
     "        self.model.aux2 = None\n",
     "        self.model.aux_logits = False\n",
@@ -37517,20 +37332,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
-    "import torchvision\n",
-    "import pytorch_lightning as pl\n",
-    "from torchvision.models import alexnet, AlexNet_Weights\n",
-    "from torchvision.models import resnet18, ResNet18_Weights\n",
-    "from torchvision.models import googlenet, GoogLeNet_Weights\n",
-    "from torchvision.models import squeezenet1_1, SqueezeNet1_1_Weights\n",
-    "\n",
     "class MammoNet(pl.LightningModule):\n",
     "\n",
     "    def __init__(self, num_classes, learning_rate=1e-4, pretrained=True, freeze_backbone=False):\n",
@@ -37538,22 +37343,19 @@
     "        self.num_classes = num_classes\n",
     "        self.lr = learning_rate\n",
     "\n",
-    "        # Build ResNet\n",
+    "        # ResNet\n",
     "        weights = ResNet18_Weights.DEFAULT if pretrained else None\n",
-    "        self.model = resnet18(weights=weights)  # weights=... is the current API :contentReference[oaicite:1]{index=1}\n",
+    "        self.model = resnet18(weights=weights)\n",
     "\n",
     "        # Replace the classifier head\n",
     "        self.model.fc = nn.Linear(self.model.fc.in_features, num_classes)\n",
     "\n",
-    "        # Optional: freeze feature extractor (train only the new head)\n",
+    "        # freeze feature extractor \n",
     "        if freeze_backbone:\n",
     "            for p in self.model.parameters():\n",
     "                p.requires_grad = False\n",
     "            for p in self.model.fc.parameters():\n",
     "                p.requires_grad = True\n",
-    "\n",
-    "        # Optional: recommended preprocessing for pretrained weights\n",
-    "        # self.preprocess = weights.transforms() if weights is not None else None :contentReference[oaicite:2]{index=2}\n",
     "\n",
     "    def forward(self, x):\n",
     "        return self.model(x)\n",
@@ -38389,7 +38191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -38404,9 +38206,7 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
+    "# validation loss for 3 models\n",
     "files = {\n",
     "    \"AlexNet\": \"graphs_models/run-mammo-net_version_35-tag-val_loss.csv\",\n",
     "    \"GoogLeNet\": \"graphs_models/run-mammo-net_version_37-tag-val_loss.csv\",\n",
@@ -38426,7 +38226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -38441,9 +38241,7 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
+    "# validation auc for 3 models\n",
     "files = {\n",
     "    \"AlexNet\": \"graphs_models/run-mammo-net_version_35-tag-val_auc.csv\",\n",
     "    \"GoogLeNet\": \"graphs_models/run-mammo-net_version_37-tag-val_auc.csv\",\n",
@@ -38492,6 +38290,13 @@
     "output_dir = os.path.join(output_base, output_name)\n",
     "\n",
     "df_pred = pd.read_csv(os.path.join(output_dir, 'predictions.csv'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Subgroup : Density"
    ]
   },
   {
@@ -38615,7 +38420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -38630,10 +38435,7 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
-    "\n",
-    "# (optional) enforce order for nicer plotting\n",
+    "# enforce order for nicer plotting\n",
     "df_combined[\"density\"] = pd.Categorical(df_combined[\"density\"], categories=[\"A\",\"B\",\"C\",\"D\"], ordered=True)\n",
     "\n",
     "ct = pd.crosstab(df_combined[\"age_group\"], df_combined[\"density\"])\n",
@@ -38648,7 +38450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -38677,7 +38479,6 @@
     "    tprs = []\n",
     "    aucs = []\n",
     "\n",
-    "    # macro ROC (one-vs-rest)\n",
     "    for k in range(C):\n",
     "        y = (targets == k).astype(int)\n",
     "\n",
@@ -39097,6 +38898,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "For our report we chose 3 subgroups to analyse : density, age and implant"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## **Part D**: Inspect the trained model by analysing feature embeddings."
    ]
   },
@@ -39124,17 +38932,11 @@
     "        self.embeddings = [] # list where we still store the embeddings\n",
     "\n",
     "    def on_test_epoch_start(self):\n",
-    "        # self.model[-1] = nn.Identity(512) # replace final classification layer with identity to get embeddings\n",
-    "        # self.embeddings = [] # clear the list of embeddings at the start of testing\n",
-    "\n",
     "        self._orig_fc = self.model.fc\n",
-    "        self.model.fc = nn.Identity()\n",
-    "        self.embeddings = []\n",
+    "        self.model.fc = nn.Identity() # replace final classification layer with identity to get embeddings\n",
+    "        self.embeddings = [] # clear the list of embeddings at the start of testing\n",
     "\n",
     "    def test_step(self, batch, batch_idx):\n",
-    "        # x = batch['image'].view(batch['image'].size(0), -1)\n",
-    "        # emb = self.model(x)\n",
-    "        # self.embeddings.append(emb.detach().cpu())\n",
     "\n",
     "        x = batch[\"image\"]      \n",
     "        emb = self(x)               \n",
@@ -39544,7 +39346,10 @@
    "outputs": [],
    "source": [
     "x = 'pca_1'\n",
-    "y = 'pca_2'"
+    "y = 'pca_2'\n",
+    "\n",
+    "# x = 'tsne_1'\n",
+    "# y = 'tsne_2'"
    ]
   },
   {
@@ -39564,6 +39369,8 @@
     }
    ],
    "source": [
+    "#plot_joint(df, 'density', x, y, color_palette)\n",
+    "\n",
     "plot_joint(df, 'implant', x, y, color_palette)"
    ]
   },
@@ -39692,6 +39499,8 @@
     "    plt.show(f)\n",
     "    \n",
     "fig = go.FigureWidget(px.scatter(df, x=x, y=y, template='simple_white', hover_data={'density': True, x:False, y:False}))\n",
+    "# fig = go.FigureWidget(px.scatter(df, x=x, y=y, template='simple_white', hover_data={'implant': True, x:False, y:False}))\n",
+    "fig.update_layout(width=600, height=600)\n",
     "fig.update_layout(width=600, height=600)\n",
     "scatter = fig.data[0]\n",
     "scatter.on_click(handle_click)\n",
