Final changes for notebook

--- a/notebook_final.ipynb
+++ b/notebook_final.ipynb
@@ -35864,7 +35864,7 @@
     "        in_features = self.model.classifier[-1].in_features\n",
     "        self.model.classifier[-1] = nn.Linear(in_features, num_classes) \n",
     "\n",
-    "        # Optional: feature extraction mode (train only classifier)\n",
+    "        # feature extraction mode (train only classifier)\n",
     "        if freeze_features:\n",
     "            for p in self.model.features.parameters():\n",
     "                p.requires_grad = False\n",
@@ -38138,51 +38138,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Restoring states from the checkpoint path at ./output/mammo-net/version_39/checkpoints/epoch=1-step=166.ckpt\n",
-      "Loaded model weights from the checkpoint at ./output/mammo-net/version_39/checkpoints/epoch=1-step=166.ckpt\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6aec37daf26a4f10ac195ba47257ede4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Testing: |                                                                                                    …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
-      "       Test metric             DataLoader 0\n",
-      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
-      "        test_auc            0.9172621965408325\n",
-      "        test_loss           0.5972970724105835\n",
-      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n"
-     ]
-    }
-   ],
-   "source": [
-    "trainer.test(model=model, datamodule=data, ckpt_path=trainer.checkpoint_callback.best_model_path)\n",
-    "save_predictions(model=model, output_fname=os.path.join(output_dir, 'predictions.csv'))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -38937,7 +38892,6 @@
     "        self.embeddings = [] # clear the list of embeddings at the start of testing\n",
     "\n",
     "    def test_step(self, batch, batch_idx):\n",
-    "\n",
     "        x = batch[\"image\"]      \n",
     "        emb = self(x)               \n",
     "        self.embeddings.append(emb.detach().cpu())\n",
