--- a/notebook_final.ipynb
+++ b/notebook_final.ipynb
@@ -35428,7 +35428,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's check the meta information of the dataset."
+    "Check the meta information of the dataset."
    ]
   },
   {
@@ -35571,7 +35571,7 @@
     "id": "0V6TlWwW_IF8"
    },
    "source": [
-    "Let's visualise some random samples from each density class. You can run this cell repeatedly to see different samples."
+    "Visualisation of some random samples from each density class. Run this cell repeatedly to see different samples."
    ]
   },
   {
@@ -35747,7 +35747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "id": "qxWMcxlh_IF9"
    },
@@ -35784,7 +35784,7 @@
     "        self.val_set = MammoDataset(self.val_data, self.image_size, image_normalization=65535.0, augmentation=False, cache_size=0.5)\n",
     "        self.test_set = MammoDataset(self.test_data, self.image_size, image_normalization=65535.0, augmentation=False)\n",
     "\n",
-    "        # print dataset statistics\n",
+    "        # compute and print class distribution statistics\n",
     "        train_labels = self.train_set.get_labels()\n",
     "        train_class_count = np.array([len(np.where(train_labels == t)[0]) for t in np.unique(train_labels)])\n",
     "\n",
@@ -35856,7 +35856,7 @@
     "        self.num_classes = num_classes\n",
     "        self.lr = learning_rate\n",
     "\n",
-    "        # AlexNet\n",
+    "        # AlexNet initialisation \n",
     "        weights = AlexNet_Weights.DEFAULT if pretrained else None\n",
     "        self.model = alexnet(weights=weights)\n",
     "\n",
@@ -36605,11 +36605,11 @@
     "        self.num_classes = num_classes\n",
     "        self.lr = learning_rate\n",
     "\n",
-    "        # GoogLeNet\n",
+    "        # GoogLeNet initialisation\n",
     "        weights = GoogLeNet_Weights.DEFAULT if pretrained else None\n",
-    "\n",
     "        self.model = googlenet(weights=weights, aux_logits=True)\n",
     "\n",
+    "        # final fully connected layer\n",
     "        self.model.fc = nn.Linear(self.model.fc.in_features, num_classes)\n",
     "\n",
     "        # Disable auxiliary heads\n",
@@ -36617,15 +36617,11 @@
     "        self.model.aux2 = None\n",
     "        self.model.aux_logits = False\n",
     "\n",
-    "\n",
-    "\n",
     "    def forward(self, x):\n",
     "        return self.model(x)\n",
     "\n",
-    "\n",
     "    def configure_optimizers(self):\n",
     "        return torch.optim.Adam(self.parameters(), lr=self.lr)\n",
-    "\n",
     "\n",
     "    def process_batch(self, batch):\n",
     "        img, lab = batch[\"image\"], batch[\"label\"]\n",
@@ -36633,8 +36629,6 @@
     "        loss = F.cross_entropy(logits, lab)\n",
     "        prd = torch.softmax(logits, dim=1)\n",
     "        return loss, prd, lab\n",
-    "\n",
-    "\n",
     "\n",
     "    def on_train_epoch_start(self):\n",
     "        self.train_preds = []\n",
@@ -36703,15 +36697,6 @@
    "metadata": {},
    "source": [
     "### Training"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We use the PyTorch Lightning [Trainer](https://lightning.ai/docs/pytorch/stable/common/trainer.html) for easy training and testing. You may need to adjust the number of epochs, but otherwise you should be able to just run the cell and wait for the training to complete.\n",
-    "\n",
-    "**TASK:** Adjust the number of epochs if needed. Report any observations about the training in your coursework report (you may want to check training and validation curves via Tensorboard)."
    ]
   },
   {
@@ -37260,15 +37245,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Evaluate the trained model with the best checkpoint on the validation data and report the classification performance.\n",
-    "\n",
-    "**TASK:** You should report the validation performance and some information about the model checkpoint in the coursework report (at what epoch/iteration did you find the best checkpoint)."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
@@ -37343,11 +37319,11 @@
     "        self.num_classes = num_classes\n",
     "        self.lr = learning_rate\n",
     "\n",
-    "        # ResNet\n",
+    "        # ResNet18 initialisation\n",
     "        weights = ResNet18_Weights.DEFAULT if pretrained else None\n",
     "        self.model = resnet18(weights=weights)\n",
     "\n",
-    "        # Replace the classifier head\n",
+    "        # final fully connected layer\n",
     "        self.model.fc = nn.Linear(self.model.fc.in_features, num_classes)\n",
     "\n",
     "        # freeze feature extractor \n",
@@ -37373,7 +37349,6 @@
     "        prd = torch.softmax(out, dim=1)\n",
     "        loss = F.cross_entropy(out, lab)\n",
     "        return loss, prd, lab\n",
-    "\n",
     "\n",
     "    def on_train_epoch_start(self):\n",
     "        self.train_preds = []\n",
@@ -37442,24 +37417,6 @@
    "metadata": {},
    "source": [
     "### Training"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We use the PyTorch Lightning [Trainer](https://lightning.ai/docs/pytorch/stable/common/trainer.html) for easy training and testing. You may need to adjust the number of epochs, but otherwise you should be able to just run the cell and wait for the training to complete.\n",
-    "\n",
-    "**TASK:** Adjust the number of epochs if needed. Report any observations about the training in your coursework report (you may want to check training and validation curves via Tensorboard)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Evaluate the trained model with the best checkpoint on the test data and report the classification performance.\n",
-    "\n",
-    "**TASK:** You should report the test performance in the coursework report."
    ]
   },
   {
@@ -37998,15 +37955,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Evaluate the trained model with the best checkpoint on the validation data and report the classification performance.\n",
-    "\n",
-    "**TASK:** You should report the validation performance and some information about the model checkpoint in the coursework report (at what epoch/iteration did you find the best checkpoint)."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -38141,7 +38089,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Visualisation of training curves*"
+    "### We evaluated the test dataset only for ResNet-18, as this architecture was selected as the final model\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## *Visualisation of training/validation curves*"
    ]
   },
   {
@@ -38368,7 +38323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -38393,6 +38348,7 @@
     }
    ],
    "source": [
+    "# visualisation the age distribution to guide the selection of age groups\n",
     "df_combined.age.value_counts().sort_index().plot(kind='bar', figsize=(10, 4))"
    ]
   },
@@ -38425,7 +38381,7 @@
     }
    ],
    "source": [
-    "# enforce order for nicer plotting\n",
+    "# density distribution by age group\n",
     "df_combined[\"density\"] = pd.Categorical(df_combined[\"density\"], categories=[\"A\",\"B\",\"C\",\"D\"], ordered=True)\n",
     "\n",
     "ct = pd.crosstab(df_combined[\"age_group\"], df_combined[\"density\"])\n",
@@ -38453,10 +38409,11 @@
     }
    ],
    "source": [
-    "C = len(class_columns)\n",
+    "C = len(class_columns)  # number of classes\n",
     "\n",
     "roc_results = {}\n",
     "\n",
+    "# Compute ROC curves separately for each age group\n",
     "for group, gdf in df_combined.groupby(\"age_group\"):\n",
     "\n",
     "    if len(gdf) < 20:\n",
@@ -38469,6 +38426,7 @@
     "    tprs = []\n",
     "    aucs = []\n",
     "\n",
+    "     # One-vs-rest ROC per class\n",
     "    for k in range(C):\n",
     "        y = (targets == k).astype(int)\n",
     "\n",
@@ -38496,7 +38454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -38537,7 +38495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38557,7 +38515,6 @@
     "    tprs = []\n",
     "    aucs = []\n",
     "\n",
-    "    # macro ROC (one-vs-rest)\n",
     "    for k in range(C):\n",
     "        y = (targets == k).astype(int)\n",
     "\n",
@@ -38626,7 +38583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38646,7 +38603,6 @@
     "    tprs = []\n",
     "    aucs = []\n",
     "\n",
-    "    # macro ROC (one-vs-rest)\n",
     "    for k in range(C):\n",
     "        y = (targets == k).astype(int)\n",
     "\n",
@@ -38715,7 +38671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38735,7 +38691,6 @@
     "    tprs = []\n",
     "    aucs = []\n",
     "\n",
-    "    # macro ROC (one-vs-rest)\n",
     "    for k in range(C):\n",
     "        y = (targets == k).astype(int)\n",
     "\n",
@@ -38804,7 +38759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38824,7 +38779,6 @@
     "    tprs = []\n",
     "    aucs = []\n",
     "\n",
-    "    # macro ROC (one-vs-rest)\n",
     "    for k in range(C):\n",
     "        y = (targets == k).astype(int)\n",
     "\n",
@@ -39342,6 +39296,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The commented lines show an alternative dimension non-linear reduction t-SNE. The same visualization pipeline was reused, and only the projection coordinates were changed."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -39361,6 +39322,13 @@
     "#plot_joint(df, 'density', x, y, color_palette)\n",
     "\n",
     "plot_joint(df, 'implant', x, y, color_palette)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The commented code shows an alternative density plot that was also analysed."
    ]
   },
   {
@@ -39497,6 +39465,13 @@
     "scatter.marker.color = colors\n",
     "\n",
     "HBox([fig, out])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We analysed both density and implant distributions using the same visualisation template.\n"
    ]
   }
  ],
